# customer-research-cli

./: .env.example  README.md  astra-zenica.md.markdown  pyproject.toml  sample_results.md.markdown  sample_results.md.markdown.orig  sample_roles.json
src/chatgpt_research/: __init__.py  cli.py  promptql_analysis.py
tests/: test_promptql_analysis.py
